--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -5,7 +5,7 @@
   font-family: "Inter-Variable";
   src: local("Inter-Variable"),
     url("../fonts/Inter-Variable.woff2") format("woff2 supports variations"),
-    url("../fonts/Roboto-Flex-Variable.woff2") format("woff2-variations");
+    url("../fonts/Inter-Variable.woff2") format("woff2-variations");
   font-weight: 400 465 700 785;
   font-stretch: 100;
 }
